Add project documentation
Quickstart guide, usage guide, configuration reference, ACL documentation,
DBeaver connection guide, troubleshooting guide, and updated README.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>