@@ -1,96 +1,86 @@
-# GizmoSQL On-Demand Proxy
+# GizmoSQL Proxy - Flight SQL Proxy with Integrated Access Control
 
-A service for managing and proxying on-demand GizmoSQL instances.
+A Flight SQL (Apache Arrow) proxy server that intercepts SQL queries, applies validation rules and table-level Access Control Lists (ACLs) before forwarding them to a GizmoSQL/DuckDB backend. Designed for DuckLake environments with PostgreSQL metadata storage.
 
-## Building
+## Architecture
 
-### Prerequisites
-- JDK 11 or higher
-- sbt (Scala Build Tool)
+```
+┌─────────────────┐     ┌──────────────────────────────────┐     ┌─────────────────┐     ┌──────────────┐
+│  Client          │     │  GizmoSQL Proxy                  │     │  GizmoSQL        │     │  PostgreSQL   │
+│  (DBeaver,      │────▶│  ┌────────────┐ ┌──────────┐    │────▶│  Backend         │────▶│  (DuckLake    │
+│   JDBC, ADBC)   │     │  │ Validation │ │ ACL      │    │     │  (DuckDB)        │     │   Metadata)   │
+│                 │◀────│  └────────────┘ └──────────┘    │◀────│                  │     │              │
+└─────────────────┘     └──────────────────────────────────┘     └─────────────────┘     └──────────────┘
+                               │                                        │
+                               │ TLS + JWT Auth                         │ S3 (optional)
+                               │                                        ▼
+                               │                                 ┌──────────────┐
+                               │                                 │  Data Storage │
+                               └──── ACL Grants (YAML files)     │  (local/S3)   │
+                                                                 └──────────────┘
+```
 
-### Build Command
-Compile and build the assembly (uber-jar):
+## Features
+
+- **SQL statement validation** — blocks DROP, configurable allow/deny
+- **Table-level ACL** with hierarchical grants (database -> schema -> table)
+- **Multi-tenant ACL** with folder-based isolation
+- **JWT authentication** with group-based permissions
+- **TLS encryption** — auto-generated self-signed certificates for development
+- **DuckLake integration** with PostgreSQL metadata
+- **Optional S3 storage** for data files
+- **Hot-reload of ACL grant files** via file watcher
+- **On-demand backend process management** with idle timeout
+- **Prepared statement validation**
+
+## Prerequisites
+
+- Java 17+ (JDK)
+- Docker Desktop
+- sbt (Scala build tool)
+- PostgreSQL (for DuckLake metadata)
+- openssl (for TLS certificate generation)
+
+## Quick Start
 
 ```bash
-make build
-# OR
+# 1. Build the project
 sbt assembly
+
+# 2. Start the GizmoSQL backend (requires Docker)
+./local-start-gizmo.sh
+
+# 3. Start the proxy (in another terminal)
+./local-start-proxy.sh
+
+# 4. Connect with JDBC
+# URL: jdbc:arrow-flight-sql://localhost:31338?useEncryption=true&disableCertificateVerification=true
 ```
 
-The resulting jar will be placed in the `distrib/` directory.
+## Key Environment Variables
 
-## Running
+| Variable | Default | Description |
+|---|---|---|
+| `PROXY_PORT` | `31338` | Proxy listen port |
+| `GIZMO_SERVER_PORT` | `31337` | Backend GizmoSQL port |
+| `SL_DB_ID` | — | DuckLake database name |
+| `PG_HOST` | `host.docker.internal` | PostgreSQL host |
+| `PG_USERNAME` | — | PostgreSQL username |
+| `PG_PASSWORD` | — | PostgreSQL password |
+| `ACL_ENABLED` | `true` | Enable/disable ACL validation |
+| `ACL_BASE_PATH` | `/etc/gizmosql/acl` | Directory containing tenant ACL grants |
+| `ACL_TENANT` | `default` | Active ACL tenant |
+| `JWT_SECRET_KEY` | `a_very_secret_key` | JWT signing secret |
 
-Start the server using the provided script:
+## Documentation
 
-```bash
-./docker-start-process-manager.sh
-```
+- [Getting Started](docs/quickstart.md) — Set up and run in 5 minutes
+- [Usage Guide](docs/guide.md) — Architecture, deployment, and configuration walkthrough
+- [Configuration Reference](docs/configuration.md) — All environment variables and settings
+- [Access Control Lists](docs/acl.md) — ACL grants, tenants, and permissions
+- [Connecting from DBeaver](docs/dbeaver.md) — Step-by-step DBeaver setup
+- [Troubleshooting](docs/troubleshooting.md) — Common issues and solutions
 
-Or run manually with java:
+## License
 
-```bash
-java --add-opens=java.base/java.nio=ALL-UNNAMED -jar distrib/gizmo-on-demand-assembly-0.1.0-SNAPSHOT.jar
-```
-
-## Configuration
-
-### Process Manager Configuration
-These variables control the main management service:
-
-| Environment Variable      | Default                                   | Description                                                                                                      |
-|---------------------------|-------------------------------------------|------------------------------------------------------------------------------------------------------------------|
-| `SL_GIZMO_ON_DEMAND_HOST` | `0.0.0.0`                                 | Host to bind the management API                                                                                  |
-| `SL_GIZMO_ON_DEMAND_PORT` | `10900`                                   | Port for the management API                                                                                      |
-| `SL_GIZMO_MIN_PORT`       | `11900`                                   | Start of port range for spawned processes                                                                        |
-| `SL_GIZMO_MAX_PORT`       | `12000`                                   | End of port range for spawned processes                                                                          |
-| `SL_GIZMO_MAX_PROCESSES`  | `10`                                      | Maximum number of concurrent proxy instances                                                                     |
-| `SL_GIZMO_DEFAULT_SCRIPT` | `/opt/gizmosql/scripts/docker-start-sl-gizmosql.sh` | Script to start the backend GizmoSQL process                                                                     |
-| `SL_GIZMO_API_KEY`        | -                                         | **Required**. API Key for authentication                                                                         |
-| `SL_GIZMO_DATA_PATHS`     | -                                         | Space-separated list of absolute paths to mount as Docker volumes (required for DuckLake local file stores only) |
-| `SL_GIZMO_IDLE_TIMEOUT`   | `-1`                                      | Idle timeout in seconds for the backend server: `>0` stops after timeout, `<0` never stops (default), `=0` stops immediately after each request |
-
-### Database Connection Configuration
-These variables configure the connection to the PostgreSQL metadata database:
-
-| Environment Variable | Default | Description         |
-|----------------------|---------|---------------------|
-| `SL_DB_ID`      | -       | Database identifier |
-| `PG_HOST`            | `host.docker.internal` | PostgreSQL host     |
-| `PG_PORT`            | `5432`  | PostgreSQL port     |
-| `PG_USERNAME`        | `postgres` | PostgreSQL username |
-| `PG_PASSWORD`        | -       | PostgreSQL password |
-
-### GizmoSQL Backend Configuration
-These variables configure the GizmoSQL backend instances:
-
-| Environment Variable   | Default | Description |
-|------------------------|---------|-------------|
-| `GIZMOSQL_USERNAME`    | -       | Username for GizmoSQL authentication |
-| `GIZMOSQL_PASSWORD`    | -       | Password for GizmoSQL authentication |
-| `JWT_SECRET_KEY`       | -       | Secret key for JWT token signing (mapped to `SECRET_KEY` for backend) |
-| `TLS_ENABLED`          | `0`     | Enable TLS for backend (`0` = disabled, `1` = enabled) |
-| `DATABASE_BACKEND`     | `duckdb` | Database backend type |
-| `DATABASE_FILENAME`    | `data/TPC-H-small.duckdb` | Path to database file |
-| `PRINT_QUERIES`        | `1`     | Print queries to logs (`0` = disabled, `1` = enabled) |
-| `READONLY`             | `0`     | Read-only mode (`0` = disabled, `1` = enabled) |
-| `QUERY_TIMEOUT`        | `0`     | Query timeout in seconds (`0` = no timeout) |
-
-### Proxy Configuration
-These variables are used by the spawned proxy instances (usually set automatically by ProcessManager):
-
-| Environment Variable | Description |
-|----------------------|-------------|
-| `PROXY_HOST`         | Host for the proxy to listen on (default `0.0.0.0`) |
-| `PROXY_PORT`         | Port for the proxy to listen on |
-| `GIZMO_SERVER_HOST`  | Host of the backend GizmoSQL (default `127.0.0.1`) |
-| `GIZMO_SERVER_PORT`  | Port of the backend GizmoSQL |
-| `PROXY_SECRET_KEY`   | Secret key for JWT generation |
-
-### TLS Configuration
-
-| Environment Variable    | Description |
-|-------------------------|-------------|
-| `PROXY_TLS_ENABLED`     | Enable TLS for the proxy (`true`/`false`) |
-| `PROXY_TLS_CERT_CHAIN`  | Path to certificate chain file |
-| `PROXY_TLS_PRIVATE_KEY` | Path to private key file |
+Apache 2.0
